resolved navbar on mobile due to position fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@
 .desktop-navbar {
 	background-color: black;
 	margin-bottom: 2px;
+	top: 7px
 }
 
 .desktop-navbar a,
@@ -82,6 +83,7 @@
 	}
 
 	.mobile-navbar {
+		position: fixed;
 		display: flex;
 		flex-direction: column;
 		height: 100%;
